2019-09-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to move selected history items to top

2019-08-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to automatically calculate the current expression on each change (as you type)

2019-08-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support "where" syntax in continious display of parsed expression

2019-08-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* RPN stack drag and drop

2019-08-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Man page

2019-07-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to delete selected history items
	* Fix segfault with command line expression

2019-07-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use typed expression on history insert/copy
	* Add insert parsed text menu item, and include both typed and parsed text for full text copy

2019-07-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Hide "Abbreviate Names" in popup menu when appropriate and add separator
	* Show custom base result popup menu item

2019-07-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve subscripting of suffixes in history

2019-07-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add "to unicode" conversion

2019-07-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add support for text arguments when hiding default function values in output
	* Fix italicization of symbol when function argument

2019-06-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support for bases > 36, negative bases, and non-integer bases
	* Reduce length of expressions in messages (primarily when using high precision)
	* Fix right-click action for cursor right and left keypad buttons

2019-06-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Change programming keypad toggle button text/icon
	* Add import definitions file to file menu
	* Make most dialogs resizable

2019-05-24 Hanna Knutsson <hanna.knutsson@protonmail.com>
