@@ -1,3 +1,7 @@
+2019-09-20 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Add "calculate as you type" result to history after idle time (1.5 s)
+
 2019-09-12 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Option to move selected history items to top
